# algorithms

./: CMakeLists.txt
src/collections/: CMakeLists.txt  bag.h  collections.h  list.h  queue.h  stack.h  stackevolution.h
src/exercises/: 1.1.01.cpp  1.1.02.cpp  1.1.03.cpp  1.1.04.cpp  1.1.05.cpp  1.1.06.cpp  1.1.07.cpp  1.1.08.cpp  1.1.09.cpp  1.1.10.cpp  1.1.11.cpp  1.1.12.cpp  1.1.13.cpp  1.1.14.cpp  1.1.15.cpp  1.1.16.cpp  1.1.17.cpp  1.1.18.cpp  1.1.19.cpp  1.1.20.cpp  1.2.01.cpp  1.2.02.cpp  1.2.03.cpp  1.2.04.cpp  1.2.05.cpp  1.2.06.cpp  CMakeLists.txt
src/fundamentals/: CMakeLists.txt  collectionsclient.cpp  counter.cpp  counter.h  countermain.cpp  doublingtest.cpp  threesum.h  unionfind.cpp
src/utils/: CMakeLists.txt  stopwatch.cpp  stopwatch.h
